// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notification /> should render correctly if not visible 1`] = `
<div
  class="sc-AxjAm hYfowd"
>
  <p>
    test
  </p>
</div>
`;

exports[`<Notification /> should render correctly if visible 1`] = `
<div
  class="sc-AxjAm kfvNSr"
>
  <p>
    test
  </p>
</div>
`;
